feat: Alterando o server

--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h2>Cadastro</h2>
-        <form action="/cadastroUsuario" method="POST">
+        <form action="/cadastro" method="POST">
             <div class="form-group">
                 <label for="username">Nome</label>
                 <input type="text" id="nome" name="nome" required>
