--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h2>Login</h2>
-        <form action="/login" method="POST">
+        <form action="/autenticarUsuario" method="POST">
             <div class="form-group">
                 <label for="email">E-mail</label>
                 <input type="email" id="email" name="email" required>
