--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <form action="" method="post">
+        Nome: <input type="text" name="nome" id="nome"></br>
         Email: <input type="text" name="email" id="email"></br>
         Senha: <input type="password" name="senha" id="senha"></br>
-        <input type="submit" value="Login"></br>
-        <p>Ainda não tem uma conta? <a href="/registrar">Cadastre-se</a></p>
+        <input type="submit" value="Cadastrar">
+        <p>Já tem uma conta? <a href="/login">Login</a></p>
     </form>
 </body>
 </html>
