--- a/static/home.css
+++ b/static/home.css
@@ -102,4 +102,13 @@ body {
     background-color: #e53935;
   }
   
-  
+  #user-info {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 10px;
+    background-color: #f7f7f7;
+    border: 1px solid #ddd; 
+    border-radius: 5px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  }
