--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}">
   </head>
   <body>
+    <div id="user-info">
+      <h2>Bem-vindo, {{ current_user.nome }}!</h2>
+    </div>
     <form action="/logout" method="get">
         <button id="logout-button" type="submit">Sair</button>
     </form>
